# distill-studio

./: .env.local.example  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
config/examples/: default.profile.example.json  generate_config.qwen_canary.example.json  updater.example.json
config/local/: generate_config.qwen.json
crates/distill-cli/: Cargo.toml
crates/distill-cli/src/: main.rs
crates/distill-core/: Cargo.toml
crates/distill-core/src/: lib.rs
crates/distill-runtime/: Cargo.toml
crates/distill-runtime/src/: lib.rs
docs/: Windows安装与启动.md  Windows安装包发布流程.md  design-doc-source.json  v0.1.6-QA评测平台联动设计.md  v0.1.7-修改计划.md  发布前准备.md  安装包使用说明.md  本地配置与密钥管理.md  测试问题收口.md  自动更新.md
docs/superpowers/plans/: 2026-04-28-paper-qa-frontend.md  2026-04-30-modularization-plan.md
docs/superpowers/specs/: 2026-04-28-paper-qa-frontend-design.md  2026-04-30-modularization-design.md
examples/: generate_config.json  pack_config.json  topic.json
scripts/: assemble-release-assets.mjs  audit-escape-html.sh  bump-version.mjs  release-assets.mjs  release-preflight.mjs  release-summary.mjs  run-tauri-release-build.mjs  run-tauri-with-env.mjs  stage-release-artifacts.mjs  sync-design-doc.mjs  sync-github-secrets.mjs  write-tauri-release-config.mjs
src/: browse-qa.ts  chat-qa.ts  constants.ts  html-template.ts  main.ts  paper-qa.ts  platform.ts  provider.ts  recent-updates.ts  settings.ts  state.ts  styles.css  topic-pipeline.ts  translations.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: chat_qa.rs  config.rs  feedback.rs  keychain.rs  lib.rs  main.rs  paper_qa_commands.rs  paper_qa_types.rs  platform_commands.rs  platform_types.rs  types.rs
src/__tests__/: escapeHtml.test.ts  resolveLLMProvider.test.ts  t.test.ts
