[package]
name = "distill-studio-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "distill_studio_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
distill-core = { path = "../crates/distill-core" }
distill-runtime = { path = "../crates/distill-runtime" }
