[package]
name = "distill-studio-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "distill_studio_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
url = "2"
regex = "1"
zip = "2"
uuid = { version = "1", features = ["v4"] }
distill-core = { path = "../crates/distill-core" }
distill-runtime = { path = "../crates/distill-runtime" }
