[package]
name = "distill-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
distill-core = { path = "../distill-core" }
distill-runtime = { path = "../distill-runtime" }
